# CUDA-HeatTransfer-3D

./: .gitignore  LICENSE  README.md
HeatTrans/: CMakeLists.txt  README.md
HeatTrans/include/: aabb.h  bvh.h  bvh_node.h  common.h  morton_code.h  obj-viewer.h  query.h  triangle.h  vector3f.h
HeatTrans/src/: bvh.cu  heatTransfer3D.cu  main.cpp  obj-viewer.cpp
